--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -15,6 +15,7 @@
 
     </data>
 
+    <!--android:onClick="@{() -> presenter.startVideoData(videoData)}"-->
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -26,7 +27,6 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
-        android:onClick="@{() -> presenter.startVideoData(videoData)}"
         card_view:cardCornerRadius="24dp">
 
         <android.support.constraint.ConstraintLayout
